Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinbase-service
spec:
  selector:
    app: coinbase-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
