Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: coinbase-service-ingress
spec:
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            backend:
              serviceName: coinbase-service
              servicePort: 80
